site/components/pages/Blog/Post/index.module.css
@value bp-medium, bp-large from "@klimadao/lib/theme/breakpoints.css";

.container {
  grid-column: full;
  grid-template-columns: inherit;
  background-color: var(--surface-02);
  color: var(--font-01);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.banner {
  position: relative;
  max-width: 120rem;
  width: 100%;
}

.bannerImage {
  height: 20rem;
  position: relative;
}

.blogContainer {
  padding: 6.4rem 0;
  line-height: 166%;
  display: grid;
  grid-template-columns: inherit;
}

.content {
  grid-column: main;
  max-width: 76rem;
  justify-self: center;
}

.date {
  margin: 2rem 0;
  color: var(--font-03) !important;
}

.fallbackContainer {
  display: grid;
  flex: auto;
}

.loadingArticle {
  justify-self: center;
  align-self: center;
}

@media bp-large {
  .banner {
    position: relative;
  }
  .banner {
    padding: 3.2rem 3.2rem 0rem;
  }
  .bannerImage {
    height: 28rem;
  }
}

